--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,15 @@
 V1/**
 TestDirectories/**
 build/main/**
+build/main/Analysis-00.toc
+build/main/base_library.zip
+build/main/COLLECT-00.toc
+build/main/EXE-00.toc
+build/main/main
+build/main/PKG-00.toc
+build/main/PKG-00.pkg
+build/main/PYZ-00.pyz
+build/main/PYZ-00.toc
+build/main/warn-main.txt
+build/main/xref-main.html
+__pycache__/main.cpython-37.pyc
