--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ build/main/Analysis-00.toc
 build/main/base_library.zip
 build/main/EXE-00.toc
 build/main/PKG-00.pkg
+fileSortConfiguration/globalIgnored.config
+jobs.json
